--- a/bonus_episodes_202/package.json
+++ b/bonus_episodes_202/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "font-awesome-icons": "^1.6.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
